--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "chrome-ext-template",
   "private": true,
+  "alias": {
+    "react-dom": "@hot-loader/react-dom"
+  },
   "scripts": {
     "dev": "npm run watch",
     "copy-assets": "mkdir -p dist && cp -r assets/* dist/",
@@ -21,14 +24,18 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "@hot-loader/react-dom": "^17.0.1",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "fp-ts": "^2.9.1",
     "http-status-codes": "^2.1.4",
     "io-ts": "^2.2.13",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hot-loader": "^4.13.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
     "webextension-polyfill-ts": "^0.22.0"
   },
